# api/merged-openapi.yaml
@@ -101,6 +101,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RegisterInternationalStudentResponse'
+  '/user-management/api/international-student/{internationalStudentId}/profile-details':
+    parameters:
+      - name: internationalStudentId
+        in: path
+        description: ID of the international student
+        required: true
+        schema:
+          type: string
+          format: uuid
+    post:
+      tags:
+        - UserManagement
+      summary: Complete international student profile details
+      description: >-
+        Allows a registered and approved international student to complete their
+        profile details.
+      operationId: completeInternationalStudentProfile
+      security:
+        - keycloak_auth:
+            - TUTOR
+            - ADMIN
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/InternationalStudentProfileDetailsRequest'
+      responses:
+        '200':
+          description: Profile details updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: >-
+                  #/components/schemas/InternationalStudentProfileDetailsResponse
+        '400':
+          description: Bad request (invalid data)
+        '401':
+          description: Unauthorized
   /settings/api/health:
     get:
       tags:
@@ -360,6 +399,33 @@ components:
             - phoneNumber
             - gender
             - termsAndConditionsChecked
+    InternationalStudentProfileDetailsRequest:
+      type: object
+      properties:
+        homeUniversity:
+          type: string
+          description: Name of the home university
+        accommodation:
+          type: string
+          description: Accommodation details
+        facultyId:
+          type: string
+          description: ID of the faculty
+        description:
+          type: string
+          description: Short student bio
+        emailMarketingChecked:
+          type: boolean
+          description: Consent to receive marketing emails
+        profilePicture:
+          type: string
+          format: binary
+          description: Profile picture file
+      required:
+        - facultyId
+        - description
+        - emailMarketingChecked
+        - profilePicture
     RegisterLocalStudentResponse:
       type: object
       properties:
@@ -373,6 +439,12 @@ components:
           type: string
           example: Student registered successfully
     LocalStudentProfileDetailsResponse:
+      type: object
+      properties:
+        result:
+          type: string
+          example: Profile details updated successfully
+    InternationalStudentProfileDetailsResponse:
       type: object
       properties:
         result:
