# usermanagement/src/main/java/cz/uhk/fim/controller/InternationalStudentController.java
@@ -2,6 +2,7 @@ package cz.uhk.fim.controller;
 
 import cz.uhk.fim.service.InternationalStudentService;
 import cz.uhk.fim.usermanagement.api.InternationalStudentApi;
+import cz.uhk.fim.usermanagement.model.InternationalStudentProfileDetailsResponse;
 import cz.uhk.fim.usermanagement.model.RegisterInternationalStudentRequest;
 import cz.uhk.fim.usermanagement.model.RegisterInternationalStudentResponse;
 import lombok.RequiredArgsConstructor;
@@ -9,6 +10,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.util.UUID;
 
 @Slf4j
 @RestController
@@ -22,5 +26,11 @@ public class InternationalStudentController implements InternationalStudentApi {
     public ResponseEntity<RegisterInternationalStudentResponse> registerInternationalStudent(RegisterInternationalStudentRequest registerInternationalStudentRequest) {
         internationalStudentService.registerInternationalStudent(registerInternationalStudentRequest);
         return ResponseEntity.ok(new RegisterInternationalStudentResponse().result("OK"));
+    }
+
+    @Override
+    public ResponseEntity<InternationalStudentProfileDetailsResponse> completeInternationalStudentProfile(UUID internationalStudentId, String facultyId, String description, Boolean emailMarketingChecked, MultipartFile profilePicture, String homeUniversity, String accommodation) {
+        internationalStudentService.completeInternationalStudentProfile(internationalStudentId, facultyId, description, emailMarketingChecked, profilePicture, homeUniversity, accommodation);
+        return ResponseEntity.ok(new InternationalStudentProfileDetailsResponse().result("OK"));
     }
 }
